src/main/java/org/example/solidPrinciples/dependancyInversion/bad/SubtractOperation.java
package org.example.solidPrinciples.dependancyInversion.bad;

public class SubtractOperation {
    public int subtract(int a, int b){
        return a-b;
    }
}
